fix input-field vertical spacing

--- a/src/app/input-field/input-field.component.scss
+++ b/src/app/input-field/input-field.component.scss
@@ -4,7 +4,7 @@
     flex-direction: row;
     justify-content: flex-start;
     flex-flow: nowrap;
-    margin-bottom: 2px;
+    margin-bottom: 0px;
 
     input[type='checkbox'] {
         display: inline-block;
